# sid-1-like-agentic-retrieval

./: .gitignore  README.md  pyproject.toml
data/: build_corpus.py  download_musique.py
environment/: embedding_index.py  retrieval_env.py  tools.py
evaluation/: baselines.py  evaluate.py  metrics.py
reward/: format_reward.py  ndcg.py
scripts/: run_data_prep.sh  run_eval.sh  run_train.sh
training/: config.yaml  tokenization.py  train_grpo.py
